--- a/api/.env.example
+++ b/api/.env.example
@@ -1,2 +1,2 @@
-AWS_ACCESS_KEY=Your-AWS-Access-Key
-AWS_SECRET_KEY=Your-AWS-Secret-Access-Key
+AZURE_STORAGE_CONNECTION_STRING=<your_azure_connection_string>
+AZURE_CONTAINER_NAME=<your_container_name>
