--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -11,6 +11,8 @@ COPY . .
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+COPY .env.example .
+
 # Make port 8000 available to the world outside this container
 EXPOSE 8000
 
